--- a/.github/workflows/dotnet-Old-V.yml
+++ b/.github/workflows/dotnet-Old-V.yml
@@ -12,7 +12,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup MSBuild path
         uses: microsoft/setup-msbuild@v1.0.2
+        
+      - name: Setup Nuget
+        uses: Nuget/Setup-nuget@v1.0.2
+        
+      - name: Restore Nuget
+        run: nuget restore GitTestAction.sln
+        
       - name: Build application
-        run: msbuild.exe GitTestAction.sln --Configuration Release
+        run: msbuild.exe GitTestAction.sln
 
    
