--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    env:
+      NUGET: ${{env.NUGET}}
     steps:
       - uses: actions/checkout@v2
       - name: Setup MSBuild path
