--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
       uses: microsoft/setup-msbuild@v1.0.2
       with:
         net-version: '4.8'
+    - name: restore nuget
+      uses: nuget restore GitTestAction.sln
+      
     - name: Build and Test
       run: |
         msbuild /p:Configuration=Release
