--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,31 @@
-name: Build and Test2
+
+name: CI
+
+# Controls when the action will run. Triggers the workflow on push or pull request 
+# events but only for the master branch
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
 jobs:
-  build:
-    runs-on: windows-latest
+  # This workflow contains a single job called "Build"
+  Build:
+    runs-on: [windows-latest]
+
     steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - name: Setup .NET Framework
-      uses: microsoft/setup-msbuild@v1.0.2
-      with:
-        net-version: '4.8'
-    - name: restore nuget
-      uses: nuget restore GitTestAction.sln
       
-    - name: Build and Test
-      run: |
-        msbuild /p:Configuration=Release
-        vstest.console.exe bin/Release/GitTestAction.Tests.dll
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1
+
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+
+    - name: Restore NuGet packages
+      run: nuget restore GitTestAction.sln
+
+    - name: Build the Solution
+      run: msbuild GitTestAction.sln /p:Configuration=Release
