--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
       run: msbuild GitTestAction.sln /p:Configuration=Release
       
     - name: run dir
-      run: dir D:\a\
+      run: dir D:\a\GitTestAction\
