--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
       run: msbuild GitTestAction.sln /p:Configuration=Release
       
     - name: run dir
-      run: dir D:\a\GitTestAction\ && dir D:\a\GitTestAction\GitTestAction\ &&  D:\a\GitTestAction\GitTestAction\bin\ && D:\a\GitTestAction\GitTestAction\obj\Release\
+      run: dir D:\a\GitTestAction\ && dir D:\a\GitTestAction\GitTestAction\ && dir D:\a\GitTestAction\GitTestAction\bin\  && dir D:\a\GitTestAction\GitTestAction\obj\Release\
